--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.51.0",
     "@clerk/clerk-sdk-node": "^4.13.23",
+    "@hookform/resolvers": "^5.2.2",
     "@supabase/supabase-js": "^2.75.0",
     "@tailwindcss/vite": "^4.1.14",
+    "@types/leaflet": "^1.9.21",
+    "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.65.0",
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.9.4",
     "svix": "^1.77.0",
     "tailwindcss": "^4.1.14",
     "zod": "^4.1.12"
