--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^4.0.7",
     "@clerk/clerk-react": "^5.51.0",
     "@clerk/clerk-sdk-node": "^4.13.23",
     "@hookform/resolvers": "^5.2.2",
     "@supabase/supabase-js": "^2.75.0",
     "@tailwindcss/vite": "^4.1.14",
     "@types/leaflet": "^1.9.21",
+    "graphql": "^16.11.0",
     "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
