--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^4.0.7",
+    "@clerk/backend": "^2.18.1",
     "@clerk/clerk-react": "^5.51.0",
     "@clerk/clerk-sdk-node": "^4.13.23",
     "@hookform/resolvers": "^5.2.2",
@@ -26,7 +27,7 @@
     "react-router-dom": "^7.9.4",
     "svix": "^1.77.0",
     "tailwindcss": "^4.1.14",
-    "zod": "^4.1.12"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
