--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/leaflet": "^1.9.21",
     "graphql": "^16.11.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
